# hole-martyr

./: .env.development  .env.production  .eslintrc.cjs  .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
api/: app.py  database.py  dynamic_settings.py  fetcher.py  message.py  settings.py
src/: App.vue  env.d.ts  main.ts  types.ts  utils.ts
src/components/: ControlPanel.vue  HoleCard.vue  HoleComment.vue  LogContainer.vue  NextScan.vue  ToastContainer.vue
src/stores/: logs.ts  notification.ts  toasts.ts
