[tool.poetry]
name = "hole-martyr"
version = "0.1.0"
description = ""
authors = ["Allan Chain "]
license = "Apache 2.0"

[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.tuna.tsinghua.edu.cn/simple'
default = true

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {version = "^0.17.6", extras = ["standard"]}
sse-starlette = "^0.10.3"
fastapi-utils = "^0.2.1"
pydantic = {version = "^1.9.0", extras = ["dotenv"]}
httpx = "^0.22.0"
databases = {version = "^0.5.5", extras = ["aiosqlite"]}
aiosqlite = "^0.17.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.960"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"


[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true
